# 4MOST-Mock-Spectra

./: .gitignore  README.rst  pyproject.toml
examples/: config_create_mock_SN_Ia_spectra.yaml  config_create_mock_SN_Ia_spectra_with_host_galaxy_contamination.yaml  example_config.yaml  example_create_mock_SN_Ia_spectra.py  example_create_mock_SN_Ia_spectra_with_host_galaxy_contamination.py
qmost_mock_spectra/: __init__.py
qmost_mock_spectra/modules/: __init__.py  assign_host.py  fibre_flux.py  input_output.py  l1_spectrum.py  parameter_grid.py  snr.py  template_spectrum.py
src/: create_mock_SN_Ia_spectra.py
src/modules/: extinction.py  input_output.py  l1_spectrum.py  parameter_grid.py  snr.py  template_spectrum.py
